// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bedrock World defaults snapshot 1`] = `
Object {
  "Parameters": Any<Object>,
  "Resources": Object {
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": Object {
      "DependsOn": Array [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs10.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": Array [
          Object {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TestBackupPlanD9853702": Object {
      "Properties": Object {
        "BackupPlan": Object {
          "BackupPlanName": "BackupPlan",
          "BackupPlanRule": Array [
            Object {
              "Lifecycle": Object {
                "DeleteAfterDays": 35,
              },
              "RuleName": "Daily",
              "ScheduleExpression": "cron(0 5 * * ? *)",
              "TargetBackupVault": Object {
                "Fn::GetAtt": Array [
                  "TestBackupPlanVault26757A03",
                  "BackupVaultName",
                ],
              },
            },
            Object {
              "Lifecycle": Object {
                "DeleteAfterDays": 365,
                "MoveToColdStorageAfterDays": 30,
              },
              "RuleName": "Monthly1Year",
              "ScheduleExpression": "cron(0 5 1 * ? *)",
              "TargetBackupVault": Object {
                "Fn::GetAtt": Array [
                  "TestBackupPlanVault26757A03",
                  "BackupVaultName",
                ],
              },
            },
          ],
        },
      },
      "Type": "AWS::Backup::BackupPlan",
    },
    "TestBackupPlanTestFileSystemSelectionDEB9ACB0": Object {
      "Properties": Object {
        "BackupPlanId": Object {
          "Fn::GetAtt": Array [
            "TestBackupPlanD9853702",
            "BackupPlanId",
          ],
        },
        "BackupSelection": Object {
          "IamRoleArn": Object {
            "Fn::GetAtt": Array [
              "TestBackupPlanTestFileSystemSelectionRole4C3413AC",
              "Arn",
            ],
          },
          "Resources": Array [
            Object {
              "Fn::Join": Array [
                "",
                Array [
                  "arn:",
                  Object {
                    "Ref": "AWS::Partition",
                  },
                  ":elasticfilesystem:",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  Object {
                    "Ref": "AWS::AccountId",
                  },
                  ":file-system/",
                  Object {
                    "Ref": "TestFileSystemE3EC6196",
                  },
                ],
              ],
            },
          ],
          "SelectionName": "TestFileSystemSelection",
        },
      },
      "Type": "AWS::Backup::BackupSelection",
    },
    "TestBackupPlanTestFileSystemSelectionRole4C3413AC": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "backup.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSBackupServiceRolePolicyForBackup",
              ],
            ],
          },
        ],
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TestBackupPlanVault26757A03": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "BackupVaultName": "TestBackupPlanVaultD2DED2EE",
      },
      "Type": "AWS::Backup::BackupVault",
      "UpdateReplacePolicy": "Retain",
    },
    "TestCluster4BB28665": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "TestClusterVpcAC75BB91": Object {
      "Properties": Object {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "TestClusterVpcIGWDA29F829": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "TestClusterVpcPrivateSubnet1DefaultRoute1858101F": Object {
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": Object {
          "Ref": "TestClusterVpcPublicSubnet1NATGateway44E1F28F",
        },
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPrivateSubnet1RouteTable6264E99E",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "TestClusterVpcPrivateSubnet1RouteTable6264E99E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PrivateSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "TestClusterVpcPrivateSubnet1RouteTableAssociation9B060FE0": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPrivateSubnet1RouteTable6264E99E",
        },
        "SubnetId": Object {
          "Ref": "TestClusterVpcPrivateSubnet1Subnet2E0285E9",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "TestClusterVpcPrivateSubnet1Subnet2E0285E9": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PrivateSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "TestClusterVpcPrivateSubnet2DefaultRouteA9363E1D": Object {
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": Object {
          "Ref": "TestClusterVpcPublicSubnet2NATGatewayC3AE7A55",
        },
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPrivateSubnet2RouteTableADF451BC",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "TestClusterVpcPrivateSubnet2RouteTableADF451BC": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PrivateSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "TestClusterVpcPrivateSubnet2RouteTableAssociation1811EE5D": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPrivateSubnet2RouteTableADF451BC",
        },
        "SubnetId": Object {
          "Ref": "TestClusterVpcPrivateSubnet2Subnet31B7811B",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "TestClusterVpcPrivateSubnet2Subnet31B7811B": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PrivateSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "TestClusterVpcPublicSubnet1DefaultRouteDD602F85": Object {
      "DependsOn": Array [
        "TestClusterVpcVPCGWF1269889",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "TestClusterVpcIGWDA29F829",
        },
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPublicSubnet1RouteTable1B2F362A",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "TestClusterVpcPublicSubnet1EIP16F420CA": Object {
      "Properties": Object {
        "Domain": "vpc",
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "TestClusterVpcPublicSubnet1NATGateway44E1F28F": Object {
      "Properties": Object {
        "AllocationId": Object {
          "Fn::GetAtt": Array [
            "TestClusterVpcPublicSubnet1EIP16F420CA",
            "AllocationId",
          ],
        },
        "SubnetId": Object {
          "Ref": "TestClusterVpcPublicSubnet1SubnetBF11C05C",
        },
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "TestClusterVpcPublicSubnet1RouteTable1B2F362A": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "TestClusterVpcPublicSubnet1RouteTableAssociationFB1AA413": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPublicSubnet1RouteTable1B2F362A",
        },
        "SubnetId": Object {
          "Ref": "TestClusterVpcPublicSubnet1SubnetBF11C05C",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "TestClusterVpcPublicSubnet1SubnetBF11C05C": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "TestClusterVpcPublicSubnet2DefaultRoute5D62A624": Object {
      "DependsOn": Array [
        "TestClusterVpcVPCGWF1269889",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "TestClusterVpcIGWDA29F829",
        },
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPublicSubnet2RouteTable45AF4244",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "TestClusterVpcPublicSubnet2EIP716CA8C9": Object {
      "Properties": Object {
        "Domain": "vpc",
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet2",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "TestClusterVpcPublicSubnet2NATGatewayC3AE7A55": Object {
      "Properties": Object {
        "AllocationId": Object {
          "Fn::GetAtt": Array [
            "TestClusterVpcPublicSubnet2EIP716CA8C9",
            "AllocationId",
          ],
        },
        "SubnetId": Object {
          "Ref": "TestClusterVpcPublicSubnet2Subnet8DAFBE18",
        },
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet2",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "TestClusterVpcPublicSubnet2RouteTable45AF4244": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "TestClusterVpcPublicSubnet2RouteTableAssociationC7BB873D": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPublicSubnet2RouteTable45AF4244",
        },
        "SubnetId": Object {
          "Ref": "TestClusterVpcPublicSubnet2Subnet8DAFBE18",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "TestClusterVpcPublicSubnet2Subnet8DAFBE18": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "TestClusterVpcVPCGWF1269889": Object {
      "Properties": Object {
        "InternetGatewayId": Object {
          "Ref": "TestClusterVpcIGWDA29F829",
        },
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "TestFileSystemE3EC6196": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "Encrypted": true,
        "FileSystemTags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/FileSystem",
          },
        ],
      },
      "Type": "AWS::EFS::FileSystem",
      "UpdateReplacePolicy": "Retain",
    },
    "TestFileSystemEfsMountTarget1683EDBAB": Object {
      "Properties": Object {
        "FileSystemId": Object {
          "Ref": "TestFileSystemE3EC6196",
        },
        "SecurityGroups": Array [
          Object {
            "Fn::GetAtt": Array [
              "TestFileSystemEfsSecurityGroupBD5AE899",
              "GroupId",
            ],
          },
        ],
        "SubnetId": Object {
          "Ref": "TestClusterVpcPrivateSubnet1Subnet2E0285E9",
        },
      },
      "Type": "AWS::EFS::MountTarget",
    },
    "TestFileSystemEfsMountTarget2D9A0FC51": Object {
      "Properties": Object {
        "FileSystemId": Object {
          "Ref": "TestFileSystemE3EC6196",
        },
        "SecurityGroups": Array [
          Object {
            "Fn::GetAtt": Array [
              "TestFileSystemEfsSecurityGroupBD5AE899",
              "GroupId",
            ],
          },
        ],
        "SubnetId": Object {
          "Ref": "TestClusterVpcPrivateSubnet2Subnet31B7811B",
        },
      },
      "Type": "AWS::EFS::MountTarget",
    },
    "TestFileSystemEfsSecurityGroupBD5AE899": Object {
      "Properties": Object {
        "GroupDescription": "Default/Test/FileSystem/EfsSecurityGroup",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/FileSystem",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "TestFileSystemEfsSecurityGroupfromTestServiceSecurityGroup382F1E6D2049FD4F2931": Object {
      "Properties": Object {
        "Description": "from TestServiceSecurityGroup382F1E6D:2049",
        "FromPort": 2049,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "TestFileSystemEfsSecurityGroupBD5AE899",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "TestServiceSecurityGroup5CFDA9A6",
            "GroupId",
          ],
        },
        "ToPort": 2049,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "TestMetricPublisherFunctionSchedule637220EC": Object {
      "Properties": Object {
        "ScheduleExpression": "rate(1 minute)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "Testmetricpublisherfunction65C3FB4C",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "account": "$.account",
                "detail-type": "$.detail-type",
                "id": "$.id",
                "region": "$.region",
                "resources": "$.resources",
                "source": "$.source",
                "time": "$.time",
                "version": "$.version",
              },
              "InputTemplate": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "{\\"account\\":<account>,\\"detail\\":{\\"clusterName\\":\\"",
                    Object {
                      "Ref": "TestCluster4BB28665",
                    },
                    "\\",\\"hostName\\":\\"test.example.com\\",\\"serviceName\\":\\"",
                    Object {
                      "Fn::GetAtt": Array [
                        "TestService2D8F51A4",
                        "Name",
                      ],
                    },
                    "\\"},\\"detail-type\\":<detail-type>,\\"id\\":<id>,\\"region\\":<region>,\\"resources\\":<resources>,\\"source\\":<source>,\\"time\\":<time>,\\"version\\":<version>}",
                  ],
                ],
              },
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "TestService2D8F51A4": Object {
      "Properties": Object {
        "Cluster": Object {
          "Ref": "TestCluster4BB28665",
        },
        "DeploymentConfiguration": Object {
          "MaximumPercent": 100,
          "MinimumHealthyPercent": 50,
        },
        "DesiredCount": 0,
        "EnableECSManagedTags": true,
        "LaunchType": "FARGATE",
        "NetworkConfiguration": Object {
          "AwsvpcConfiguration": Object {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": Array [
              Object {
                "Fn::GetAtt": Array [
                  "TestServiceSecurityGroup5CFDA9A6",
                  "GroupId",
                ],
              },
            ],
            "Subnets": Array [
              Object {
                "Ref": "TestClusterVpcPublicSubnet1SubnetBF11C05C",
              },
              Object {
                "Ref": "TestClusterVpcPublicSubnet2Subnet8DAFBE18",
              },
            ],
          },
        },
        "PlatformVersion": "LATEST",
        "PropagateTags": "SERVICE",
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
        "TaskDefinition": Object {
          "Ref": "TestTask53E41544",
        },
      },
      "Type": "AWS::ECS::Service",
    },
    "TestServiceScaleDownAction8933CDFD": Object {
      "Properties": Object {
        "PolicyName": "TestServiceScaleDownAction6AABDAA0",
        "PolicyType": "StepScaling",
        "ScalingTargetId": Object {
          "Ref": "TestServiceTargetD4DD2DAB",
        },
        "StepScalingPolicyConfiguration": Object {
          "AdjustmentType": "ExactCapacity",
          "MetricAggregationType": "Maximum",
          "StepAdjustments": Array [
            Object {
              "MetricIntervalUpperBound": 0,
              "ScalingAdjustment": 0,
            },
          ],
        },
      },
      "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
    },
    "TestServiceScaleDownAlarmFE40952B": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Ref": "TestServiceScaleDownAction8933CDFD",
          },
        ],
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": Array [
          Object {
            "Name": "ClusterName",
            "Value": Object {
              "Ref": "TestCluster4BB28665",
            },
          },
          Object {
            "Name": "ServiceName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TestService2D8F51A4",
                "Name",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "PlayersOnline",
        "Namespace": "Minecraft",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TestServiceSecurityGroup5CFDA9A6": Object {
      "Properties": Object {
        "GroupDescription": "Default/Test/Service/SecurityGroup",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "SecurityGroupIngress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Minecraft server port",
            "FromPort": 19132,
            "IpProtocol": "udp",
            "ToPort": 19132,
          },
          Object {
            "CidrIpv6": "::/0",
            "Description": "Minecraft server port",
            "FromPort": 19133,
            "IpProtocol": "udp",
            "ToPort": 19133,
          },
        ],
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "TestServiceTargetD4DD2DAB": Object {
      "Properties": Object {
        "MaxCapacity": 1,
        "MinCapacity": 0,
        "ResourceId": Object {
          "Fn::Join": Array [
            "",
            Array [
              "service/",
              Object {
                "Ref": "TestCluster4BB28665",
              },
              "/",
              Object {
                "Fn::GetAtt": Array [
                  "TestService2D8F51A4",
                  "Name",
                ],
              },
            ],
          ],
        },
        "RoleARN": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":iam::",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService",
            ],
          ],
        },
        "ScalableDimension": "ecs:service:DesiredCount",
        "ServiceNamespace": "ecs",
      },
      "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
    },
    "TestTask53E41544": Object {
      "Properties": Object {
        "ContainerDefinitions": Array [
          Object {
            "Environment": Array [],
            "Essential": true,
            "Image": "itzg/minecraft-bedrock-server",
            "LogConfiguration": Object {
              "LogDriver": "awslogs",
              "Options": Object {
                "awslogs-group": Object {
                  "Ref": "TestTaskMinecraftContainerLogGroup7BE6E4C0",
                },
                "awslogs-region": Object {
                  "Ref": "AWS::Region",
                },
                "awslogs-stream-prefix": "Test",
              },
            },
            "MountPoints": Array [
              Object {
                "ContainerPath": "/data",
                "ReadOnly": false,
                "SourceVolume": "efs",
              },
            ],
            "Name": "MinecraftContainer",
            "PortMappings": Array [
              Object {
                "ContainerPort": 19132,
                "Protocol": "udp",
              },
              Object {
                "ContainerPort": 19133,
                "Protocol": "udp",
              },
            ],
          },
        ],
        "Cpu": "256",
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "TestTaskExecutionRole973798C3",
            "Arn",
          ],
        },
        "Family": "TestTask65AB24DD",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": Array [
          "FARGATE",
        ],
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
        "TaskRoleArn": Object {
          "Fn::GetAtt": Array [
            "TestTaskTaskRole802DCD4B",
            "Arn",
          ],
        },
        "Volumes": Array [
          Object {
            "EfsVolumeConfiguration": Object {
              "FileSystemId": Object {
                "Ref": "TestFileSystemE3EC6196",
              },
              "TransitEncryption": "ENABLED",
            },
            "Name": "efs",
          },
        ],
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "TestTaskExecutionRole973798C3": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TestTaskExecutionRoleDefaultPolicy8CF26FE7": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "TestTaskMinecraftContainerLogGroup7BE6E4C0",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TestTaskExecutionRoleDefaultPolicy8CF26FE7",
        "Roles": Array [
          Object {
            "Ref": "TestTaskExecutionRole973798C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TestTaskMinecraftContainerLogGroup7BE6E4C0": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "TestTaskTaskRole802DCD4B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Testmetricpublisherfunction65C3FB4C": Object {
      "DependsOn": Array [
        "TestmetricpublisherfunctionServiceRoleDefaultPolicyC3F59BFD",
        "TestmetricpublisherfunctionServiceRoleD8443199",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "TestmetricpublisherfunctionServiceRoleD8443199",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestmetricpublisherfunctionAllowEventRuleTestMetricPublisherFunctionSchedule3689B57C9BAD9C4D": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "Testmetricpublisherfunction65C3FB4C",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "TestMetricPublisherFunctionSchedule637220EC",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "TestmetricpublisherfunctionLogRetentionD68A25EE": Object {
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "Testmetricpublisherfunction65C3FB4C",
              },
            ],
          ],
        },
        "RetentionInDays": 1,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "TestmetricpublisherfunctionServiceRoleD8443199": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TestmetricpublisherfunctionServiceRoleDefaultPolicyC3F59BFD": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "cloudwatch:PutMetricData",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TestmetricpublisherfunctionServiceRoleDefaultPolicyC3F59BFD",
        "Roles": Array [
          Object {
            "Ref": "TestmetricpublisherfunctionServiceRoleD8443199",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`Bedrock World enable sftp 1`] = `
Object {
  "Parameters": Any<Object>,
  "Resources": Object {
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": Object {
      "DependsOn": Array [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs10.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": Array [
          Object {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TestBackupPlanD9853702": Object {
      "Properties": Object {
        "BackupPlan": Object {
          "BackupPlanName": "BackupPlan",
          "BackupPlanRule": Array [
            Object {
              "Lifecycle": Object {
                "DeleteAfterDays": 35,
              },
              "RuleName": "Daily",
              "ScheduleExpression": "cron(0 5 * * ? *)",
              "TargetBackupVault": Object {
                "Fn::GetAtt": Array [
                  "TestBackupPlanVault26757A03",
                  "BackupVaultName",
                ],
              },
            },
            Object {
              "Lifecycle": Object {
                "DeleteAfterDays": 365,
                "MoveToColdStorageAfterDays": 30,
              },
              "RuleName": "Monthly1Year",
              "ScheduleExpression": "cron(0 5 1 * ? *)",
              "TargetBackupVault": Object {
                "Fn::GetAtt": Array [
                  "TestBackupPlanVault26757A03",
                  "BackupVaultName",
                ],
              },
            },
          ],
        },
      },
      "Type": "AWS::Backup::BackupPlan",
    },
    "TestBackupPlanTestFileSystemSelectionDEB9ACB0": Object {
      "Properties": Object {
        "BackupPlanId": Object {
          "Fn::GetAtt": Array [
            "TestBackupPlanD9853702",
            "BackupPlanId",
          ],
        },
        "BackupSelection": Object {
          "IamRoleArn": Object {
            "Fn::GetAtt": Array [
              "TestBackupPlanTestFileSystemSelectionRole4C3413AC",
              "Arn",
            ],
          },
          "Resources": Array [
            Object {
              "Fn::Join": Array [
                "",
                Array [
                  "arn:",
                  Object {
                    "Ref": "AWS::Partition",
                  },
                  ":elasticfilesystem:",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  Object {
                    "Ref": "AWS::AccountId",
                  },
                  ":file-system/",
                  Object {
                    "Ref": "TestFileSystemE3EC6196",
                  },
                ],
              ],
            },
          ],
          "SelectionName": "TestFileSystemSelection",
        },
      },
      "Type": "AWS::Backup::BackupSelection",
    },
    "TestBackupPlanTestFileSystemSelectionRole4C3413AC": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "backup.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSBackupServiceRolePolicyForBackup",
              ],
            ],
          },
        ],
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TestBackupPlanVault26757A03": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "BackupVaultName": "TestBackupPlanVaultD2DED2EE",
      },
      "Type": "AWS::Backup::BackupVault",
      "UpdateReplacePolicy": "Retain",
    },
    "TestCluster4BB28665": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::ECS::Cluster",
    },
    "TestClusterVpcAC75BB91": Object {
      "Properties": Object {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "TestClusterVpcIGWDA29F829": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "TestClusterVpcPrivateSubnet1DefaultRoute1858101F": Object {
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": Object {
          "Ref": "TestClusterVpcPublicSubnet1NATGateway44E1F28F",
        },
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPrivateSubnet1RouteTable6264E99E",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "TestClusterVpcPrivateSubnet1RouteTable6264E99E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PrivateSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "TestClusterVpcPrivateSubnet1RouteTableAssociation9B060FE0": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPrivateSubnet1RouteTable6264E99E",
        },
        "SubnetId": Object {
          "Ref": "TestClusterVpcPrivateSubnet1Subnet2E0285E9",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "TestClusterVpcPrivateSubnet1Subnet2E0285E9": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PrivateSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "TestClusterVpcPrivateSubnet2DefaultRouteA9363E1D": Object {
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": Object {
          "Ref": "TestClusterVpcPublicSubnet2NATGatewayC3AE7A55",
        },
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPrivateSubnet2RouteTableADF451BC",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "TestClusterVpcPrivateSubnet2RouteTableADF451BC": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PrivateSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "TestClusterVpcPrivateSubnet2RouteTableAssociation1811EE5D": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPrivateSubnet2RouteTableADF451BC",
        },
        "SubnetId": Object {
          "Ref": "TestClusterVpcPrivateSubnet2Subnet31B7811B",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "TestClusterVpcPrivateSubnet2Subnet31B7811B": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PrivateSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "TestClusterVpcPublicSubnet1DefaultRouteDD602F85": Object {
      "DependsOn": Array [
        "TestClusterVpcVPCGWF1269889",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "TestClusterVpcIGWDA29F829",
        },
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPublicSubnet1RouteTable1B2F362A",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "TestClusterVpcPublicSubnet1EIP16F420CA": Object {
      "Properties": Object {
        "Domain": "vpc",
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "TestClusterVpcPublicSubnet1NATGateway44E1F28F": Object {
      "Properties": Object {
        "AllocationId": Object {
          "Fn::GetAtt": Array [
            "TestClusterVpcPublicSubnet1EIP16F420CA",
            "AllocationId",
          ],
        },
        "SubnetId": Object {
          "Ref": "TestClusterVpcPublicSubnet1SubnetBF11C05C",
        },
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "TestClusterVpcPublicSubnet1RouteTable1B2F362A": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "TestClusterVpcPublicSubnet1RouteTableAssociationFB1AA413": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPublicSubnet1RouteTable1B2F362A",
        },
        "SubnetId": Object {
          "Ref": "TestClusterVpcPublicSubnet1SubnetBF11C05C",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "TestClusterVpcPublicSubnet1SubnetBF11C05C": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "TestClusterVpcPublicSubnet2DefaultRoute5D62A624": Object {
      "DependsOn": Array [
        "TestClusterVpcVPCGWF1269889",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "TestClusterVpcIGWDA29F829",
        },
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPublicSubnet2RouteTable45AF4244",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "TestClusterVpcPublicSubnet2EIP716CA8C9": Object {
      "Properties": Object {
        "Domain": "vpc",
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet2",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "TestClusterVpcPublicSubnet2NATGatewayC3AE7A55": Object {
      "Properties": Object {
        "AllocationId": Object {
          "Fn::GetAtt": Array [
            "TestClusterVpcPublicSubnet2EIP716CA8C9",
            "AllocationId",
          ],
        },
        "SubnetId": Object {
          "Ref": "TestClusterVpcPublicSubnet2Subnet8DAFBE18",
        },
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet2",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "TestClusterVpcPublicSubnet2RouteTable45AF4244": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "TestClusterVpcPublicSubnet2RouteTableAssociationC7BB873D": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "TestClusterVpcPublicSubnet2RouteTable45AF4244",
        },
        "SubnetId": Object {
          "Ref": "TestClusterVpcPublicSubnet2Subnet8DAFBE18",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "TestClusterVpcPublicSubnet2Subnet8DAFBE18": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/Cluster/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "TestClusterVpcVPCGWF1269889": Object {
      "Properties": Object {
        "InternetGatewayId": Object {
          "Ref": "TestClusterVpcIGWDA29F829",
        },
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "TestFileSystemE3EC6196": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "Encrypted": true,
        "FileSystemTags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/FileSystem",
          },
        ],
      },
      "Type": "AWS::EFS::FileSystem",
      "UpdateReplacePolicy": "Retain",
    },
    "TestFileSystemEfsMountTarget1683EDBAB": Object {
      "Properties": Object {
        "FileSystemId": Object {
          "Ref": "TestFileSystemE3EC6196",
        },
        "SecurityGroups": Array [
          Object {
            "Fn::GetAtt": Array [
              "TestFileSystemEfsSecurityGroupBD5AE899",
              "GroupId",
            ],
          },
        ],
        "SubnetId": Object {
          "Ref": "TestClusterVpcPrivateSubnet1Subnet2E0285E9",
        },
      },
      "Type": "AWS::EFS::MountTarget",
    },
    "TestFileSystemEfsMountTarget2D9A0FC51": Object {
      "Properties": Object {
        "FileSystemId": Object {
          "Ref": "TestFileSystemE3EC6196",
        },
        "SecurityGroups": Array [
          Object {
            "Fn::GetAtt": Array [
              "TestFileSystemEfsSecurityGroupBD5AE899",
              "GroupId",
            ],
          },
        ],
        "SubnetId": Object {
          "Ref": "TestClusterVpcPrivateSubnet2Subnet31B7811B",
        },
      },
      "Type": "AWS::EFS::MountTarget",
    },
    "TestFileSystemEfsSecurityGroupBD5AE899": Object {
      "Properties": Object {
        "GroupDescription": "Default/Test/FileSystem/EfsSecurityGroup",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
          Object {
            "Key": "Name",
            "Value": "Default/Test/FileSystem",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "TestFileSystemEfsSecurityGroupfromTestServiceSecurityGroup382F1E6D2049FD4F2931": Object {
      "Properties": Object {
        "Description": "from TestServiceSecurityGroup382F1E6D:2049",
        "FromPort": 2049,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "TestFileSystemEfsSecurityGroupBD5AE899",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "TestServiceSecurityGroup5CFDA9A6",
            "GroupId",
          ],
        },
        "ToPort": 2049,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "TestMetricPublisherFunctionSchedule637220EC": Object {
      "Properties": Object {
        "ScheduleExpression": "rate(1 minute)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "Testmetricpublisherfunction65C3FB4C",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "account": "$.account",
                "detail-type": "$.detail-type",
                "id": "$.id",
                "region": "$.region",
                "resources": "$.resources",
                "source": "$.source",
                "time": "$.time",
                "version": "$.version",
              },
              "InputTemplate": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "{\\"account\\":<account>,\\"detail\\":{\\"clusterName\\":\\"",
                    Object {
                      "Ref": "TestCluster4BB28665",
                    },
                    "\\",\\"hostName\\":\\"test.example.com\\",\\"serviceName\\":\\"",
                    Object {
                      "Fn::GetAtt": Array [
                        "TestService2D8F51A4",
                        "Name",
                      ],
                    },
                    "\\"},\\"detail-type\\":<detail-type>,\\"id\\":<id>,\\"region\\":<region>,\\"resources\\":<resources>,\\"source\\":<source>,\\"time\\":<time>,\\"version\\":<version>}",
                  ],
                ],
              },
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "TestService2D8F51A4": Object {
      "Properties": Object {
        "Cluster": Object {
          "Ref": "TestCluster4BB28665",
        },
        "DeploymentConfiguration": Object {
          "MaximumPercent": 100,
          "MinimumHealthyPercent": 50,
        },
        "DesiredCount": 0,
        "EnableECSManagedTags": true,
        "LaunchType": "FARGATE",
        "NetworkConfiguration": Object {
          "AwsvpcConfiguration": Object {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": Array [
              Object {
                "Fn::GetAtt": Array [
                  "TestServiceSecurityGroup5CFDA9A6",
                  "GroupId",
                ],
              },
            ],
            "Subnets": Array [
              Object {
                "Ref": "TestClusterVpcPublicSubnet1SubnetBF11C05C",
              },
              Object {
                "Ref": "TestClusterVpcPublicSubnet2Subnet8DAFBE18",
              },
            ],
          },
        },
        "PlatformVersion": "LATEST",
        "PropagateTags": "SERVICE",
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
        "TaskDefinition": Object {
          "Ref": "TestTask53E41544",
        },
      },
      "Type": "AWS::ECS::Service",
    },
    "TestServiceScaleDownAction8933CDFD": Object {
      "Properties": Object {
        "PolicyName": "TestServiceScaleDownAction6AABDAA0",
        "PolicyType": "StepScaling",
        "ScalingTargetId": Object {
          "Ref": "TestServiceTargetD4DD2DAB",
        },
        "StepScalingPolicyConfiguration": Object {
          "AdjustmentType": "ExactCapacity",
          "MetricAggregationType": "Maximum",
          "StepAdjustments": Array [
            Object {
              "MetricIntervalUpperBound": 0,
              "ScalingAdjustment": 0,
            },
          ],
        },
      },
      "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
    },
    "TestServiceScaleDownAlarmFE40952B": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Ref": "TestServiceScaleDownAction8933CDFD",
          },
        ],
        "ComparisonOperator": "LessThanThreshold",
        "DatapointsToAlarm": 15,
        "Dimensions": Array [
          Object {
            "Name": "ClusterName",
            "Value": Object {
              "Ref": "TestCluster4BB28665",
            },
          },
          Object {
            "Name": "ServiceName",
            "Value": Object {
              "Fn::GetAtt": Array [
                "TestService2D8F51A4",
                "Name",
              ],
            },
          },
        ],
        "EvaluationPeriods": 15,
        "MetricName": "PlayersOnline",
        "Namespace": "Minecraft",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TestServiceSecurityGroup5CFDA9A6": Object {
      "Properties": Object {
        "GroupDescription": "Default/Test/Service/SecurityGroup",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "SecurityGroupIngress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Minecraft server port",
            "FromPort": 19132,
            "IpProtocol": "udp",
            "ToPort": 19132,
          },
          Object {
            "CidrIpv6": "::/0",
            "Description": "Minecraft server port",
            "FromPort": 19133,
            "IpProtocol": "udp",
            "ToPort": 19133,
          },
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "SFTP port",
            "FromPort": 22,
            "IpProtocol": "tcp",
            "ToPort": 22,
          },
          Object {
            "CidrIpv6": "::/0",
            "Description": "SFTP port",
            "FromPort": 22,
            "IpProtocol": "tcp",
            "ToPort": 22,
          },
        ],
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
        "VpcId": Object {
          "Ref": "TestClusterVpcAC75BB91",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "TestServiceTargetD4DD2DAB": Object {
      "Properties": Object {
        "MaxCapacity": 1,
        "MinCapacity": 0,
        "ResourceId": Object {
          "Fn::Join": Array [
            "",
            Array [
              "service/",
              Object {
                "Ref": "TestCluster4BB28665",
              },
              "/",
              Object {
                "Fn::GetAtt": Array [
                  "TestService2D8F51A4",
                  "Name",
                ],
              },
            ],
          ],
        },
        "RoleARN": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":iam::",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService",
            ],
          ],
        },
        "ScalableDimension": "ecs:service:DesiredCount",
        "ServiceNamespace": "ecs",
      },
      "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
    },
    "TestTask53E41544": Object {
      "Properties": Object {
        "ContainerDefinitions": Array [
          Object {
            "Environment": Array [],
            "Essential": true,
            "Image": "itzg/minecraft-bedrock-server",
            "LogConfiguration": Object {
              "LogDriver": "awslogs",
              "Options": Object {
                "awslogs-group": Object {
                  "Ref": "TestTaskMinecraftContainerLogGroup7BE6E4C0",
                },
                "awslogs-region": Object {
                  "Ref": "AWS::Region",
                },
                "awslogs-stream-prefix": "Test",
              },
            },
            "MountPoints": Array [
              Object {
                "ContainerPath": "/data",
                "ReadOnly": false,
                "SourceVolume": "efs",
              },
            ],
            "Name": "MinecraftContainer",
            "PortMappings": Array [
              Object {
                "ContainerPort": 19132,
                "Protocol": "udp",
              },
              Object {
                "ContainerPort": 19133,
                "Protocol": "udp",
              },
            ],
          },
          Object {
            "Essential": false,
            "Image": "atmoz/sftp",
            "LogConfiguration": Object {
              "LogDriver": "awslogs",
              "Options": Object {
                "awslogs-group": Object {
                  "Ref": "TestTaskSftpContainerLogGroupF631C648",
                },
                "awslogs-region": Object {
                  "Ref": "AWS::Region",
                },
                "awslogs-stream-prefix": "Test",
              },
            },
            "MountPoints": Array [
              Object {
                "ContainerPath": "/home/engineal/data",
                "ReadOnly": false,
                "SourceVolume": "efs",
              },
            ],
            "Name": "SftpContainer",
            "PortMappings": Array [
              Object {
                "ContainerPort": 22,
                "Protocol": "tcp",
              },
            ],
            "Secrets": Array [
              Object {
                "Name": "SFTP_USERS",
                "ValueFrom": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":ssm:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":parameter/users",
                    ],
                  ],
                },
              },
            ],
          },
        ],
        "Cpu": "256",
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "TestTaskExecutionRole973798C3",
            "Arn",
          ],
        },
        "Family": "TestTask65AB24DD",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": Array [
          "FARGATE",
        ],
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
        "TaskRoleArn": Object {
          "Fn::GetAtt": Array [
            "TestTaskTaskRole802DCD4B",
            "Arn",
          ],
        },
        "Volumes": Array [
          Object {
            "EfsVolumeConfiguration": Object {
              "FileSystemId": Object {
                "Ref": "TestFileSystemE3EC6196",
              },
              "TransitEncryption": "ENABLED",
            },
            "Name": "efs",
          },
        ],
      },
      "Type": "AWS::ECS::TaskDefinition",
    },
    "TestTaskExecutionRole973798C3": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TestTaskExecutionRoleDefaultPolicy8CF26FE7": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "TestTaskMinecraftContainerLogGroup7BE6E4C0",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "TestTaskSftpContainerLogGroupF631C648",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "ssm:DescribeParameters",
                "ssm:GetParameters",
                "ssm:GetParameter",
                "ssm:GetParameterHistory",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":ssm:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/users",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TestTaskExecutionRoleDefaultPolicy8CF26FE7",
        "Roles": Array [
          Object {
            "Ref": "TestTaskExecutionRole973798C3",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TestTaskMinecraftContainerLogGroup7BE6E4C0": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "TestTaskSftpContainerLogGroupF631C648": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "TestTaskTaskRole802DCD4B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "ecs-tasks.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Testmetricpublisherfunction65C3FB4C": Object {
      "DependsOn": Array [
        "TestmetricpublisherfunctionServiceRoleDefaultPolicyC3F59BFD",
        "TestmetricpublisherfunctionServiceRoleD8443199",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "TestmetricpublisherfunctionServiceRoleD8443199",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestmetricpublisherfunctionAllowEventRuleTestMetricPublisherFunctionSchedule3689B57C9BAD9C4D": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "Testmetricpublisherfunction65C3FB4C",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "TestMetricPublisherFunctionSchedule637220EC",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "TestmetricpublisherfunctionLogRetentionD68A25EE": Object {
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "Testmetricpublisherfunction65C3FB4C",
              },
            ],
          ],
        },
        "RetentionInDays": 1,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "TestmetricpublisherfunctionServiceRoleD8443199": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": Array [
          Object {
            "Key": "minecraft:worldName",
            "Value": "Test",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TestmetricpublisherfunctionServiceRoleDefaultPolicyC3F59BFD": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "cloudwatch:PutMetricData",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TestmetricpublisherfunctionServiceRoleDefaultPolicyC3F59BFD",
        "Roles": Array [
          Object {
            "Ref": "TestmetricpublisherfunctionServiceRoleD8443199",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
